syntax = "proto3";

option go_package = "./servicepb/servicepb";

package servicepb;

service Service{
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Put(PutRequest) returns (Empty) {}
	rpc Evict(EvictRequest) returns (Empty) {}
	rpc EvictAll(EvictAllRequest) returns (Empty) {}
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc HealthCheck(Empty) returns (Empty) {}
}

message Item{;
	bytes value = 1;
	int64 expire = 2;
}

message GetRequest{
	string table = 1;
	string key = 2;
}

message GetResponse{
	Item item = 1;
	bool hit = 2;
}

message PutRequest{
	string table = 1;
	string key = 2;
	Item item = 3;
}

message EvictRequest{
	string table = 1;
	string key = 2;
}

message EvictAllRequest{
	string table = 1;
	repeated string keys = 2;
}

message CallRequest{
	string table = 1;
	string key = 2;
	string procedure = 3;
	bytes args = 4;
}

message CallResponse{
	Item item = 1;
}

message Empty{
}
